# zephyrproject-rtos-zephyr

./: CMakeLists.txt  CODEOWNERS  MAINTAINERS.yml
boards/gardena/sgrm/: CMakeLists.txt  board.c  sgrm-pinctrl.dtsi  sgrm.dts  sgrm.yaml
cmake/: gen_version_h.cmake
cmake/modules/: git.cmake
drivers/clock_control/: clock_control_nrf.c
drivers/crypto/: crypto_mcux_dcp.c  crypto_mtls_shim.c  crypto_si32.c  crypto_tc_shim.c
drivers/flash/: spi_nor.c
drivers/gpio/: CMakeLists.txt  gpio_si32.c  gpio_si32_hd.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  Kconfig.si32  Kconfig.silabs_si32  hwinfo_si32.c
drivers/i2c/: i2c_ll_stm32_v1.c  i2c_stm32_v1.c
drivers/net/: Kconfig  ppp.c
drivers/sensor/voltage_divider/: voltage.c
drivers/serial/: uart_si32_usart.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.si32  spi_si32.c
dts/arm/silabs/: sim3u.dtsi
dts/bindings/: binding-types.txt
dts/bindings/gpio/: silabs,si32-hd-gpio.yaml
dts/bindings/misc/: gardena,sgrm-antenna.yaml
include/zephyr/crypto/: cipher.h  crypto.h
scripts/kconfig/: kconfig.py
subsys/: CMakeLists.txt  Kconfig
subsys/factory_data/: CMakeLists.txt  Kconfig  factory_data_common.c  factory_data_dummy.c  factory_data_lv.c  factory_data_shell.c
tests/drivers/crypto/cipher/: CMakeLists.txt  generate-test-data.py  overlay-mbedtls-shim.conf  overlay-tinycrypt-shim.conf  prj.conf  testcase.yaml
tests/drivers/crypto/cipher/boards/: sim3u1xx_dk.overlay
tests/drivers/crypto/cipher/src/: cbc.c  cbc_test_data.c  cbc_test_data.h  common.h  ctr.c  ctr_test_data.c  ctr_test_data.h  ecb.c  main.c
(+57 files in other folders)
